# RGBDAcquisition

./: .gitignore  CMakeLists.txt  CodeBlocks.workspace  README  README.md  captureStereoFromCar.sh  configure.sh  debug_editor.sh  debug_muxgrabber.sh  debug_viewer.sh  get-dependencies.sh  getBroadcastDependencies.sh  make.sh  makefile  perf_muxer.sh  perf_segmenter.sh  run_acquisitionBroadcast.sh  run_editor.sh  run_grabber.sh  run_muxgrabber.sh  run_segmenter.sh  run_viewer.sh  run_viewerOGL.sh  testProcessorBodyTracker.sh  testProcessorDarknet.sh  testProcessorDisparityMapping.sh  testProcessorFaceDetector.sh  testProcessorMovidius.sh
DepthSenseGrabberCV/: CMakeLists.txt  CMakeLists.txt.unix  DepthSenseGrabberCV.cxx  DepthSenseGrabberCV.hxx
DepthSenseGrabberCore/: CMakeLists.txt  DepthSenseGrabberCore.cxx  DepthSenseGrabberCore.hxx  cleanOutput.sh  resizeColor.sh
DepthSenseGrabberOpenCV/: CMakeLists.txt  DepthSenseGrabberOpenCV.cxx
DepthSenseGrabberPCL/: CMakeLists.txt  DepthSenseGrabberPCL.cxx  pcd_write.cpp
DepthSenseGrabberPNM/: CMakeLists.txt  DepthSenseGrabberPNM.cxx  DepthSenseGrabberPNM.hxx
DepthSenseGrabberSO/: CMakeLists.txt  CMakeLists.txt.windows  DepthSenseGrabberSO.cxx  DepthSenseGrabberSO.layout.cbTemp  cleanOutput.sh  makeVideo.sh  resizeDepth.sh
acquisition/: Acquisition.c  Acquisition.cbp  Acquisition.cbp.mak  Acquisition.depend  Acquisition.h  Acquisition.layout  Acquisition.layout.cbTemp  CMakeLists.txt  acquisitionFileOutput.c  acquisitionFileOutput.h  acquisitionScriptInput.c  acquisitionScriptInput.h  acquisition_setup.h  main.c  pluginLinker.c  pluginLinker.h  processorLinker.c  processorLinker.h
acquisitionSegment/: AcquisitionSegment.c  AcquisitionSegment.h  CMakeLists.txt  acquisitionSegment.cbp  acquisitionSegment.cbp.mak  acquisitionSegment.layout  automaticPlaneSegmentation.c  automaticPlaneSegmentation.h  colorSelector.c  colorSelector.h  combineRGBAndDepthOutput.c  combineRGBAndDepthOutput.h  depthSelector.c  depthSelector.h  imageProcessing.c  imageProcessing.h
acquisition_mux/: AcquisitionMux.c  AcquisitionMux.cbp  AcquisitionMux.cbp.mak  AcquisitionMux.h  CMakeLists.txt  main.c
depthsense_acquisition_shared_library/: CMakeLists.txt  DepthSenseAcquisition.c  DepthSenseAcquisition.cxx  DepthSenseAcquisition.h  DepthSenseAcquisition.hxx
desktop_acquisition_shared_library/: CMakeLists.txt  DesktopAcquisition.c  DesktopAcquisition.h
editor/: AddNewElement.cpp  AddNewElement.h  CMakeLists.txt  Editor.cbp  EditorApp.cpp  EditorApp.h  EditorCodeBlocks.workspace  EditorMain.cpp  EditorMain.h  FeedScreenMemory.cpp  FeedScreenMemory.h  GetExtrinsics.cpp  GetExtrinsics.h  ScanHuman.cpp  ScanHuman.h  SelectAcquisitionGraph.cpp  SelectAcquisitionGraph.h  SelectCalibration.cpp  SelectCalibration.h  SelectModule.cpp  SelectModule.h  SelectSegmentation.cpp  SelectSegmentation.h  SelectTarget.cpp  SelectTarget.h  Tools.cpp  Tools.h  makefile
gpuCompare/: CMakeLists.txt  Makefile  codeblocks.workspace  gpuCompare.cu  gpuCompare_kernel.cuh
grabber/: CMakeLists.txt  Grabber.cbp  Grabber.cbp.mak  Grabber.depend  Grabber.layout  convert_frames_to_jpg.sh  empty_frames.sh  main.c  make.sh  make.sh~  makefile
grabber_mux/: CMakeLists.txt  GrabberMux.cbp  GrabberMux.cbp.mak  main.c  scene.conf
grabber_segment/: CMakeLists.txt  GrabberSegment.cbp  GrabberSegment.cbp.mak  main.c
libfreenect2_acquisition_shared_library/: CMakeLists.txt  Freenect2Acquisition.cbp  Freenect2Acquisition.cpp  Freenect2Acquisition.h
libfreenect_acquisition_shared_library/: CMakeLists.txt  FreenectAcquisition.c  FreenectAcquisition.cbp  FreenectAcquisition.cbp.mak  FreenectAcquisition.depend  FreenectAcquisition.h  FreenectAcquisition.layout  addKinectToUDev.sh  kinect  main.c
librealsense_acquisition_shared_library/: CMakeLists.txt  RealsenseAcquisition.c  RealsenseAcquisition.h
network_acquisition_shared_library/: CMakeLists.txt  NetworkAcquisition.cbp  NetworkAcquisition.cbp.mak  NetworkAcquisition.h  daemon.c  daemon.h  daemon_ammarserver.c  daemon_ammarserver.h  daemon_standalone.c  daemon_standalone.h  main.c  networkBackbone_ffmpeg.c  networkFramework.c  networkFramework.h
opengl_acquisition_shared_library/: CMakeLists.txt  OpenGLAcquisition.c  OpenGLAcquisition.cbp  OpenGLAcquisition.cbp.mak  OpenGLAcquisition.cpp  OpenGLAcquisition.depend  OpenGLAcquisition.h  OpenGLAcquisition.layout  main.cpp  main.cpp~
openni1_acquisition_shared_library/: CMakeLists.txt  OpenNI1Acquisition.cbp  OpenNI1Acquisition.cbp.mak  OpenNI1Acquisition.cpp  OpenNI1Acquisition.depend  OpenNI1Acquisition.h  OpenNI1Acquisition.layout  main.cpp
openni2_acquisition_shared_library/: 55-primesense-usb.rules  CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  NITE2.workspace  Nite2.cpp  Nite2.cpp.bak  Nite2.h  Nite2.h.bak  OpenNI2Acquisition.cpp  OpenNI2Acquisition.cpp.bak  OpenNI2Acquisition.h  OpenNI2Aquisition.cbp  OpenNI2Aquisition.cbp.mak  OpenNI2Aquisition.depend  OpenNI2Aquisition.layout  OpenNI2Aquisition_Nite2.cbp  OpenNiAquisition.cbp.mak~  main.cpp
processors/: CMakeLists.txt  CMakeLists.txt~
sharedmemory_acquisition_shared_library/: CMakeLists.txt  SharedMemory.c  SharedMemory.cbp  SharedMemory.h  SharedMemoryServer.c  SharedMemoryServer.h  client.c  server.c  test.sh
template_acquisition_shared_library/: CMakeLists.txt  TemplateAcquisition.c  TemplateAcquisition.cbp  TemplateAcquisition.cbp.mak  TemplateAcquisition.cpp  TemplateAcquisition.depend  TemplateAcquisition.h  TemplateAcquisition.layout  TemplateAcquisition.layout.cbTemp  main.cpp  templateAcquisitionHelper.c  templateAcquisitionHelper.h
tools/: CMakeLists.txt  Calibration.workspace  Tools.workspace  make  makefile
v4l2_acquisition_shared_library/: CMakeLists.txt  PixelFormatConversions.c  PixelFormatConversions.h  V4L2Acquisition.c  V4L2Acquisition.cbp  V4L2Acquisition.cbp.mak  V4L2Acquisition.h  V4L2IntrinsicCalibration.c  V4L2IntrinsicCalibration.h  V4L2Wrapper.c  V4L2Wrapper.h  V4L2_c.c  V4L2_c.h
v4l2stereo_acquisition_shared_library/: CMakeLists.txt  V4L2StereoAcquisition.c  (+3 more)
(+1007 files in other folders)
